--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 management.endpoint.health.show-details: always
 
 spring:
-  datasource:
-    initialization-mode: always
   kafka:
     listener:
       missingTopicsFatal: false
@@ -16,3 +14,6 @@ spring:
   output:
     ansi:
       enabled: always
+  sql:
+    init:
+      mode: always
