Sets kafka producter max block timeout to 5 seconds so that we get a timeout when the send events doesn't work, for example when kafka is down

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
     producer:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        max.block.ms: 5000  # Set max block time to 5 seconds
 
   output:
     ansi:
